# Screen-Resolution

./: CMakeLists.txt  CMakeLists.txtm  LICENSE  mod.json
.github/workflows/: build.yml
src/: main.cpp
